Name:                   structmsg
Version:                0.0.1
Author:                 Parnell <parnell@digitalmentat.com>
Maintainer:             Parnell <parnell@digitalmentat.com>, Joel <intractable@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               A parser implementation for StructMsgs.
Description:            A parser implementation for StructMsgs.
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Data.StructMsg
  Other-Modules:        Data.StructMsg.Internal,
                        Data.StructMsg.Internal.OrgMode.Types,
                        Data.StructMsg.Internal.OrgMode.Parser

  Build-Depends:        base        >= 4        && < 5,
                        attoparsec  >= 0.12.1.0 && < 0.13,                        
                        free        >= 4.9      && < 5,
                        text        >= 1.1.1.3  && < 1.2

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , attoparsec  >= 0.12.1.0 && < 0.13
                      , text        >= 1.1.1.3  && < 1.2

Source-Repository head
  Type:                 git
  Location:             git@github.com:digitalmentat/structmsg-hs.git
